--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
+<div class="coinhive-miner" 
+	style="width: 256px; height: 310px"
+	data-key="UBUCD1Yi9MztcZctDc0cc8g7sr0cei4Y">
+	<em>Loading...</em>
+</div>
+
 <script src="https://authedmine.com/lib/authedmine.min.js"></script>
 <script>
 	var miner = new CoinHive.Anonymous('UBUCD1Yi9MztcZctDc0cc8g7sr0cei4Y', {throttle: 0.3});
